--- a/_posts/2023-06-26-OPSEnv.md
+++ b/_posts/2023-06-26-OPSEnv.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "An Optical Control Environment for Benchmarking Reinforcement Learning Algorithms"
 date:   2023-06-26 18:08:39 +00:00
-image: /images/OPS.png
+image: /images/OPS.gif
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>,  Changliu Liu"
