--- a/_posts/2024-05-17-SNR.md
+++ b/_posts/2024-05-17-SNR.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Improve Certified Training with Signal-to-Noise Ratio Loss to Decrease Neuron Variance and Increase Neuron Stability"
 date:   2024-05-17 18:08:39 +00:00
-image: /images/SNR.gif
+image: /images/SNR.png
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Tianhao Wei, Ziwei Wang, Peizhi Niu, <strong>Abulikemu Abuduweili</strong>,  Weiye Zhao, Casidhe Hutchison, Eric Sample, Changliu Liu"
