--- a/_posts/2019-07-24-AGPC.md
+++ b/_posts/2019-07-24-AGPC.md
@@ -8,9 +8,8 @@ author: "Abulikemu Abuduweili"
 authors: "Wenhuan Zeng*, <strong>Abulikemu Abuduweili*</strong>,  Lei Li, Pengcheng Yang"
 venue: "ACL: Student Research Workshop"
 location: "Florence, Italy"
-arxiv: https://aclanthology.org/P19-2032.pdf
-code: https://github.com/Walleclipse/AGPC 
-youtube: https://www.youtube.com/watch?v=LgtkWJ_oCR0
+arxiv: https://aclanthology.org/P19-2032/ 
+code: https://github.com/Walleclipse/AGPC
 ---
 
 In this paper, we present the task of automatically generating personalized comments for social media. 
