--- a/_posts/2021-04-12-CCT.md
+++ b/_posts/2021-04-12-CCT.md
@@ -7,7 +7,7 @@ categories: research
 author: "Abulikemu Abuduweili"
 authors: "Ali Hassani, Steven Walton, Nikhil Shah, <strong>Abulikemu Abuduweili</strong>,  Jiachen Li, Humphrey Shi"
 venue: "CVPR workshop on Learning from Limited and Imperfect Data, Invited Talk"
-arxiv: https://arxiv.org/pdf/2104.05704 
+arxiv: https://arxiv.org/abs/2104.05704 
 code: https://github.com/SHI-Labs/Compact-Transformers 
 youtube: https://www.youtube.com/watch?v=AEWhf_hMBgs 
 ---
