--- a/_posts/2021-06-19-ACR.md
+++ b/_posts/2021-06-19-ACR.md
@@ -8,7 +8,7 @@ author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>,  Xingjian Li, Humphrey Shi, Cheng-Zhong Xu, Dejing Dou"
 venue: "IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)"
 location: "Virtual"
-arxiv: https://openaccess.thecvf.com/content/CVPR2021/papers/Abuduweili_Adaptive_Consistency_Regularization_for_Semi-Supervised_Transfer_Learning_CVPR_2021_paper.pdf 
+arxiv: https://openaccess.thecvf.com/content/CVPR2021/html/Abuduweili_Adaptive_Consistency_Regularization_for_Semi-Supervised_Transfer_Learning_CVPR_2021_paper.html
 code: https://github.com/SHI-Labs/Semi-Supervised-Transfer-Learning 
 ---
 
