--- a/_posts/2023-06-26-OPSEnv.md
+++ b/_posts/2023-06-26-OPSEnv.md
@@ -7,7 +7,7 @@ categories: research
 author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>,  Changliu Liu"
 venue: "Transactions on Machine Learning Research (TMLR)"
-arxiv: https://openreview.net/pdf?id=61TKzU9B96 
+arxiv: https://openreview.net/forum?id=61TKzU9B96 
 code: https://github.com/Walleclipse/Reinforcement-Learning-Pulse-Stacking 
 ---
 
