--- a/_posts/2024-05-17-SNR.md
+++ b/_posts/2024-05-17-SNR.md
@@ -7,7 +7,7 @@ categories: research
 author: "Abulikemu Abuduweili"
 authors: "Tianhao Wei, Ziwei Wang, Peizhi Niu, <strong>Abulikemu Abuduweili</strong>,  Weiye Zhao, Casidhe Hutchison, Eric Sample, Changliu Liu"
 venue: "Transactions on Machine Learning Research (TMLR)"
-arxiv: https://openreview.net/pdf?id=iV0jktFZ5Y
+arxiv: https://openreview.net/forum?id=iV0jktFZ5Y
 code: https://openreview.net/attachment?id=iV0jktFZ5Y&name=supplementary_material
 ---
 
