--- a/_posts/2020-07-31-MEKF.md
+++ b/_posts/2020-07-31-MEKF.md
@@ -8,7 +8,7 @@ author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>,  Changliu Liu"
 venue: "Learning for Dynamics and Control (L4DC)"
 location: "Virtual"
-arxiv: https://proceedings.mlr.press/v120/abuduweili20a/abuduweili20a.pdf 
+arxiv: https://proceedings.mlr.press/v120/abuduweili20a.html 
 code: https://github.com/intelligent-control-lab/MEKF_MAME
 youtube: https://www.youtube.com/watch?v=15vXtd5rg70&t=60s 
 ---
