--- a/_posts/2021-12-06-PAR.md
+++ b/_posts/2021-12-06-PAR.md
@@ -6,7 +6,7 @@ image: /images/PAR.png
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Yaqing Wang*, <strong>Abulikemu Abuduweili*</strong>,  Quanming Yao, Dejing Dou"
-venue: "Advances in Neural Information Processing Systems (NeurIPS), Spotlight (<3\%)"
+venue: "Advances in Neural Information Processing Systems (NeurIPS), Spotlight (<3%)"
 location: "Virtual"
 arxiv: https://proceedings.neurips.cc/paper/2021/file/91bc333f6967019ac47b49ca0f2fa757-Paper.pdf
 code: https://github.com/tata1661/PAR-NeurIPS21 
