--- a/_posts/2020-07-31-MEKF.md
+++ b/_posts/2020-07-31-MEKF.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Robust online model adaptation by extended kalman filter with exponential moving average and dynamic multi-epoch strategy"
+title:  "Robust Online Model Adaptation by Extended Kalman Filter with Exponential Moving Average and Dynamic Multi-Epoch Strategy"
 date:   2020-07-31 18:08:39 +00:00
 image: /images/MEKF.gif
 categories: research
