--- a/_posts/2020-11-08-NRLS.md
+++ b/_posts/2020-11-08-NRLS.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Robust nonlinear adaptation algorithms for multitask prediction networks"
+title:  "Robust Nonlinear Adaptation Algorithms for Multitask Prediction Networks"
 date:   2020-11-08 18:08:39 +00:00
 image: /images/OnlineAdaptation.png
 categories: research
