--- a/_posts/2021-04-01-OE.md
+++ b/_posts/2021-04-01-OE.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Reinforcement learning based robust control algorithms for coherent pulse stacking"
+title:  "Reinforcement Learning based Robust Control Algorithms for Coherent Pulse Stacking"
 date:   2021-04-01 18:08:39 +00:00
 image: /images/CPS-RL.png
 categories: research
