--- a/_posts/2021-04-12-CCT.md
+++ b/_posts/2021-04-12-CCT.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "Escaping the big data paradigm with compact transformers"
+title:  "Escaping the Big Data Paradigm with Compact Transformers"
 date:   2021-04-12 18:08:39 +00:00
 image: /images/CCT.png
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Ali Hassani, Steven Walton, Nikhil Shah, <strong>Abulikemu Abuduweili</strong>,  Jiachen Li, Humphrey Shi"
-venue: "CVPR workshop on Learning from Limited and Imperfect Data, [Invited Talk]"
+venue: "CVPR workshop on Learning from Limited and Imperfect Data,  <strong>[Invited Talk]</strong>"
 arxiv: https://arxiv.org/abs/2104.05704 
 code: https://github.com/SHI-Labs/Compact-Transformers 
 youtube: https://www.youtube.com/watch?v=AEWhf_hMBgs 
