--- a/_posts/2021-12-06-PAR.md
+++ b/_posts/2021-12-06-PAR.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "Property-aware relation networks for few-shot molecular property prediction"
+title:  "Property-Aware Relation Networks for Few-Shot Molecular Property Prediction"
 date:   2021-12-06 18:08:39 +00:00
 image: /images/PAR.png
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Yaqing Wang*, <strong>Abulikemu Abuduweili*</strong>,  Quanming Yao, Dejing Dou"
-venue: "Advances in Neural Information Processing Systems (NeurIPS), [Spotlight]"
+venue: "Advances in Neural Information Processing Systems (NeurIPS), <strong>[Spotlight]</strong>"
 location: "Virtual"
 arxiv: https://proceedings.neurips.cc/paper/2021/file/91bc333f6967019ac47b49ca0f2fa757-Paper.pdf
 code: https://github.com/tata1661/PAR-NeurIPS21 
