--- a/_posts/2023-09-06-BioSLAM.md
+++ b/_posts/2023-09-06-BioSLAM.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Bioslam: A bioinspired lifelong memory system for general place recognition"
+title:  "BioSLAM: A Bioinspired Lifelong Memory System for General Place Recognition"
 date:   2023-09-06 18:08:39 +00:00
 image: /images/BioSLAM.gif
 categories: research
