--- a/_posts/2019-07-24-AGPC.md
+++ b/_posts/2019-07-24-AGPC.md
@@ -6,7 +6,7 @@ image: /images/AGPC.png
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Wenhuan Zeng*, <strong>Abulikemu Abuduweili*</strong>,  Lei Li, Pengcheng Yang"
-venue: "ACL: Student Research Workshop"
+venue: "ACL Student Research Workshop"
 location: "Florence, Italy"
 arxiv: https://aclanthology.org/P19-2032/ 
 code: https://github.com/Walleclipse/AGPC
