--- a/_posts/2021-04-12-CCT.md
+++ b/_posts/2021-04-12-CCT.md
@@ -10,6 +10,7 @@ venue: "CVPR Workshop on Learning from Limited and Imperfect Data,  <strong>[Inv
 arxiv: https://arxiv.org/abs/2104.05704 
 code: https://github.com/SHI-Labs/Compact-Transformers 
 youtube: https://www.youtube.com/watch?v=AEWhf_hMBgs 
+highlight: true
 ---
 
 
