--- a/_posts/2021-12-06-PAR.md
+++ b/_posts/2021-12-06-PAR.md
@@ -10,6 +10,7 @@ venue: "Advances in Neural Information Processing Systems (NeurIPS), <strong>[Sp
 location: "Virtual"
 arxiv: https://proceedings.neurips.cc/paper/2021/file/91bc333f6967019ac47b49ca0f2fa757-Paper.pdf
 code: https://github.com/tata1661/PAR-NeurIPS21 
+highlight: true
 ---
 
 
