--- a/_posts/2023-09-06-BioSLAM.md
+++ b/_posts/2023-09-06-BioSLAM.md
@@ -9,6 +9,7 @@ authors: "Peng Yin*, <strong>Abulikemu Abuduweili*</strong>,  Shiqi Zhao, Lingyu
 venue: "IEEE Transactions on Robotics (T-RO)"
 arxiv: https://ieeexplore.ieee.org/abstract/document/10242249 
 youtube: https://www.youtube.com/watch?v=2qJYXMNUuyI 
+website: https://metaslam.github.io/localization/2022/07/31/BioSLAM/
 highlight: true
 ---
 
