--- a/_posts/2013-07-01-Reversi.md
+++ b/_posts/2013-07-01-Reversi.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Ultimate_Reversi (黑白棋)"
+title:  "Ultimate Reversi (黑白棋)"
 date:   2014-07-01 18:08:39 +00:00
 image: /images/play.png
 categories: project
