--- a/_posts/2018-08-01-OCR.md
+++ b/_posts/2018-08-01-OCR.md
@@ -14,7 +14,8 @@ code: https://github.com/Walleclipse/ChineseAddress_OCR
 
 In this work, we propose an efficient pipeline for recognizing text in extremely noisy and blurry photographed images. By integrating the Connectionist Text Proposal Network (CTPN) with DenseNet, we design an initial step for text detection and recognition. 
 Subsequently, we apply fuzzy matching to align the detected text with a predefined library, enabling further refinement of the results. 
-Our method achieves an 83% accuracy on highly noisy datasets, with a 97% approximate accuracy for cases where the edit distance is less than 3.
+
+[//]: # (Our method achieves an 83% accuracy on highly noisy datasets, with a 97% approximate accuracy for cases where the edit distance is less than 3.)
 
 
 
