--- a/_posts/2019-05-01-iWildCam.md
+++ b/_posts/2019-05-01-iWildCam.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Efficient Method for Categorize Animals in the Wild"
 date:   2019-05-01 18:08:39 +00:00
-image: /images/iWildCam.png
+image: /images/iWildCam.gif
 categories: project
 author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>, Xin Wu, Xingchen Tao"
