--- a/_posts/2021-06-19-ACR.md
+++ b/_posts/2021-06-19-ACR.md
@@ -16,4 +16,6 @@ highlight: true
 
 In this work, we jointly address semi-supervised learning and transfer learning by introducing adaptive consistency regularization. 
 This method effectively leverages powerful pre-trained models from the source domain while utilizing both labeled and 
-unlabeled data in the target domain to improve learning outcomes.
+unlabeled data in the target domain to improve learning outcomes.  Importantly, examples for consistency regularization are adaptively 
+selected based on their potential contributions to the target task. 
+Furthermore, our algorithm is complementary to existing methods, enabling additional performance improvements when combined.
