--- a/_posts/2021-12-06-PAR.md
+++ b/_posts/2021-12-06-PAR.md
@@ -6,14 +6,16 @@ image: /images/PAR.png
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Yaqing Wang*, <strong>Abulikemu Abuduweili*</strong>,  Quanming Yao, Dejing Dou"
-venue: "Advances in Neural Information Processing Systems (NeurIPS), <strong>[Spotlight]</strong>"
+venue: "Advances in Neural Information Processing Systems (NeurIPS) <strong>[Spotlight]</strong>, in adjunct with IJCAI-WSRL Workshop <strong>[Best Paper Runner-ups]</strong> "
 location: "Virtual"
 arxiv: https://proceedings.neurips.cc/paper/2021/file/91bc333f6967019ac47b49ca0f2fa757-Paper.pdf
 code: https://github.com/tata1661/PAR-NeurIPS21 
+video: https://neurips.cc/virtual/2021/poster/26476 
 highlight: true
 ---
 
 
 In this paper, we propose Property-Aware Relation (PAR) Networks to address the few-shot learning problem in molecular property prediction. 
 We introduce a property-aware embedding function and an adaptive relation graph learning module, enabling the joint estimation of 
-molecular relation graphs tailored to specific properties.
+molecular relation graphs tailored to specific properties. In addition, we adopt a meta-learning strategy where the parameters are 
+selectively updated within tasks in order to model generic and property-aware knowledge separately. 
