--- a/_posts/2024-11-21-Adam.md
+++ b/_posts/2024-11-21-Adam.md
@@ -6,7 +6,7 @@ image: /images/AdamInit.png
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>, Changliu Liu"
-venue: " Annual Workshop on Optimization for Machine Learning"
+venue: " Annual Workshop on Optimization for Machine Learning (OPT)"
 location: "Vancouver, Canada"
 arxiv: https://openreview.net/forum?id=Xe0dVlWU2q&referrer=%5Bthe%20profile%20of%20Abulikemu%20Abuduweili%5D(%2Fprofile%3Fid%3D~Abulikemu_Abuduweili2) 
 ---
