--- a/_posts/2013-07-01-Reversi.md
+++ b/_posts/2013-07-01-Reversi.md
@@ -13,4 +13,6 @@ code: https://github.com/Walleclipse/Ultimate_Reversi
 
 This is a C++-based Reversi (Othello) program featuring a graphical user interface (GUI). 
 It supports functionalities such as saving and loading games, online multiplayer, and AI battles. 
-The AI is implemented using alpha-beta pruning, iterative deepening, and a transposition table for enhanced performance.
+The AI is implemented using Alpha-Beta Pruning, Iterative Deepening Depth-First Search, and a Translation Table for enhanced performance.
+
+[//]: # (The AI bot ranked among the top 10% in both the Reversi and Ataxx competitions, the top 5% in the Gomoku competition, and the top 3% in the Renju competition on the <a href="https://www.botzone.org.cn/">Botzone</a> online multi-agent competitive platform.)
