--- a/_posts/2023-09-06-BioSLAM.md
+++ b/_posts/2023-09-06-BioSLAM.md
@@ -6,10 +6,10 @@ image: /images/BioSLAM.gif
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Peng Yin*, <strong>Abulikemu Abuduweili*</strong>,  Shiqi Zhao, Lingyun Xu, Changliu Liu, Sebastian Scherer"
-venue: "IEEE Transactions on Robotics (T-RO)"
+venue: "IEEE Transactions on Robotics (T-RO),  in adjunct with ICRA"
 arxiv: https://ieeexplore.ieee.org/abstract/document/10242249 
 youtube: https://www.youtube.com/watch?v=2qJYXMNUuyI 
-website: https://metaslam.github.io/localization/2022/07/31/BioSLAM/
+blog: https://metaslam.github.io/localization/2022/07/31/BioSLAM/
 highlight: true
 ---
 
