--- a/_posts/2023-06-26-OPSEnv.md
+++ b/_posts/2023-06-26-OPSEnv.md
@@ -6,7 +6,7 @@ image: /images/OPS.gif
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>,  Changliu Liu"
-venue: "Transactions on Machine Learning Research (TMLR);  in adjunct with ICML-AI4S Workshop"
+venue: "Transactions on Machine Learning Research (TMLR),  in adjunct with ICML-AI4S Workshop"
 arxiv: https://openreview.net/forum?id=61TKzU9B96 
 code: https://github.com/Walleclipse/Reinforcement-Learning-Pulse-Stacking 
 video: https://icml.cc/virtual/2022/19942
