--- a/_posts/2020-07-31-MEKF.md
+++ b/_posts/2020-07-31-MEKF.md
@@ -10,7 +10,7 @@ venue: "Learning for Dynamics and Control (L4DC)"
 location: "Virtual"
 arxiv: https://proceedings.mlr.press/v120/abuduweili20a.html 
 code: https://github.com/intelligent-control-lab/MEKF_MAME
-youtube: https://www.youtube.com/watch?v=15vXtd5rg70&t=60s 
+video: https://www.youtube.com/watch?v=15vXtd5rg70&t=60s 
 ---
 
 The challenge of the generalization gap between training and test sets highlights the need for online adaptation algorithms to update prediction models in real time. 
