--- a/_posts/2021-04-12-CCT.md
+++ b/_posts/2021-04-12-CCT.md
@@ -9,7 +9,7 @@ authors: "Ali Hassani, Steven Walton, Nikhil Shah, <strong>Abulikemu Abuduweili<
 venue: "CVPR Workshop on Learning from Limited and Imperfect Data  <strong>[Invited Talk]</strong>"
 arxiv: https://arxiv.org/abs/2104.05704 
 code: https://github.com/SHI-Labs/Compact-Transformers 
-youtube: https://www.youtube.com/watch?v=AEWhf_hMBgs 
+video: https://www.youtube.com/watch?v=AEWhf_hMBgs 
 blog: https://medium.com/pytorch/training-compact-transformers-from-scratch-in-30-minutes-with-pytorch-ff5c21668ed5
 highlight: true
 ---
