--- a/_posts/2023-09-06-BioSLAM.md
+++ b/_posts/2023-09-06-BioSLAM.md
@@ -8,7 +8,7 @@ author: "Abulikemu Abuduweili"
 authors: "Peng Yin*, <strong>Abulikemu Abuduweili*</strong>,  Shiqi Zhao, Lingyun Xu, Changliu Liu, Sebastian Scherer"
 venue: "IEEE Transactions on Robotics (T-RO),  in adjunct with ICRA"
 arxiv: https://ieeexplore.ieee.org/abstract/document/10242249 
-youtube: https://www.youtube.com/watch?v=2qJYXMNUuyI 
+video: https://www.youtube.com/watch?v=2qJYXMNUuyI 
 blog: https://metaslam.github.io/localization/2022/07/31/BioSLAM/
 highlight: true
 ---
