--- a/_posts/2024-11-22-HRC.md
+++ b/_posts/2024-11-22-HRC.md
@@ -9,7 +9,7 @@ authors: "Peiqi Yu*, <strong>Abulikemu Abuduweili*</strong>, Ruixuan Liu, Changl
 venue: " In submission; Arxiv preprint"
 arxiv: https://arxiv.org/
 code: https://github.com/intelligent-control-lab/Robust-Hierarchial-Multimodal-HRC
-youtube: https://www.youtube.com/watch?v=2kkANN9ueVY 
+video: https://www.youtube.com/watch?v=2kkANN9ueVY 
 ---
 
 
