--- a/_posts/2024-11-22-HRC.md
+++ b/_posts/2024-11-22-HRC.md
@@ -7,7 +7,7 @@ categories: research
 author: "Abulikemu Abuduweili"
 authors: "Peiqi Yu*, <strong>Abulikemu Abuduweili*</strong>, Ruixuan Liu, Changliu Liu"
 venue: " In submission; Arxiv preprint"
-arxiv: https://arxiv.org/
+arxiv: https://arxiv.org/abs/2411.15711 
 code: https://github.com/intelligent-control-lab/Robust-Hierarchial-Multimodal-HRC
 video: https://www.youtube.com/watch?v=2kkANN9ueVY 
 ---
