--- a/_posts/2024-11-21-Adam.md
+++ b/_posts/2024-11-21-Adam.md
@@ -13,6 +13,6 @@ arxiv: https://arxiv.org/abs/2412.02153
 
 
 While Adam is known for its faster convergence, it often exhibits poorer generalization compared to SGD. In this work, 
-we show the standard initialization of the second-order moment estimation ($v_0 =0$) of Adam as a significant factor contributing 
+we show the standard initialization of the second-order moment estimation of Adam as a significant factor contributing 
 to these limitations. We introduce simple yet effective solutions: initializing the second-order moment estimation with non-zero values, 
 using either data-driven or random initialization strategies. 
