--- a/_posts/2024-07-11-MedGPT.md
+++ b/_posts/2024-07-11-MedGPT.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Exploring the Potential of ChatGPT-4 for Clinical Decision Support in Cardiac Electrophysiology and Its Semi-Automatic Evaluation Metrics"
 date:   2024-07-11 18:08:39 +00:00
 image: /images/Afib.png
-categories: med
+categories: research
 author: "Abulikemu Abuduweili"
 authors: "Xiarepati Tieliwaerdi, <strong>Abulikemu Abuduweili</strong>,  Saleh Saleh, Erasmus Mutabi, Michael A Rosenberg, Emerson Liu"
 venue: "MedRxiv preprint"
