--- a/_posts/2018-08-01-OCR.md
+++ b/_posts/2018-08-01-OCR.md
@@ -12,8 +12,7 @@ video: https://www.bilibili.com/video/av30081208
 ---
 
 
-In this work, we propose an efficient pipeline for recognizing text in extremely noisy and blurry photographed images. By integrating the Connectionist Text Proposal Network (CTPN) with DenseNet, we design an initial step for text detection and recognition. 
-Subsequently, we apply fuzzy matching to align the detected text with a predefined library, enabling further refinement of the results. 
+This work presents an efficient pipeline for text recognition in noisy, blurry images by combining CTPN with DenseNet for detection and recognition. Fuzzy matching aligns detected text with a predefined library for refined results.
 
 [//]: # (Our method achieves an 83% accuracy on highly noisy datasets, with a 97% approximate accuracy for cases where the edit distance is less than 3.)
 
