--- a/_posts/2019-05-01-iWildCam.md
+++ b/_posts/2019-05-01-iWildCam.md
@@ -12,7 +12,4 @@ code: https://github.com/Walleclipse/iWildCam_2019_FGVC6
 ---
 
 
-In this work, we propose an efficient method for categorizing animals in the wild. To enhance the model's generalization and robustness, 
-we employ advanced image augmentation and regularization strategies, including cutout, mixup, and label smoothing. Additionally, we utilize 
-ensemble learning to further boost model performance. By leveraging these advanced regularization techniques and ensemble learning, 
-our approach secured a top 7/336 placement in the iWildCam 2019 competition, held as part of CVPR 2019.
+This work proposes an efficient method for categorizing wild animals using advanced image augmentation (cutout, mixup, label smoothing) and ensemble learning. These techniques enhanced model robustness and secured a top 7/336 placement in the iWildCam 2019 competition at CVPR 2019.
