--- a/_posts/2019-06-01-UFO.md
+++ b/_posts/2019-06-01-UFO.md
@@ -11,7 +11,4 @@ code: https://github.com/Walleclipse/Pulse_Evolution
 ---
 
 
-This project introduces a user-friendly platform for simulating pulse evolution in optical fibers. 
-It offers a comprehensive set of features for representing laser pulses, modeling fiber characteristics, 
-and simulating nonlinear processes such as four-wave mixing and supercontinuum generation. The package is complemented by a simple and intuitive graphical user interface (GUI), 
-making it accessible for users at all experience levels.
+This project presents a user-friendly platform with a GUI for simulating pulse evolution in optical fibers, including laser pulse representation, fiber modeling, and nonlinear processes like four-wave mixing and supercontinuum generation. It is designed for users of all experience levels.
