--- a/_posts/2019-07-24-AGPC.md
+++ b/_posts/2019-07-24-AGPC.md
@@ -12,6 +12,4 @@ arxiv: https://aclanthology.org/P19-2032/
 code: https://github.com/Walleclipse/AGPC
 ---
 
-In this paper, we present the task of automatically generating personalized comments for social media. 
-We propose the Personalized Comment Generation Network, a novel approach designed to produce comments that are not only relevant 
-and grammatically accurate but also tailored to reflect consistent personal styles and individual personality traits.
+This paper introduces the Personalized Comment Generation Network, a method for automatically generating social media comments that are relevant, grammatically accurate, and aligned with individual personality traits and styles.
