--- a/_posts/2020-07-31-MEKF.md
+++ b/_posts/2020-07-31-MEKF.md
@@ -13,6 +13,5 @@ code: https://github.com/intelligent-control-lab/MEKF_MAME
 video: https://www.youtube.com/watch?v=15vXtd5rg70&t=60s 
 ---
 
-The challenge of the generalization gap between training and test sets highlights the need for online adaptation algorithms to update prediction models in real time. 
-Drawing inspiration from the Extended Kalman Filter (EKF), this paper presents a suite of online adaptation methods 
-specifically designed for neural network-based models.
+
+This paper addresses the train-test generalization gap by introducing online adaptation methods inspired by the Extended Kalman Filter (EKF) to update neural network models in test time.
