--- a/_posts/2020-11-08-NRLS.md
+++ b/_posts/2020-11-08-NRLS.md
@@ -11,7 +11,5 @@ arxiv: https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198
 code: https://github.com/intelligent-control-lab/MEKF_MAME
 ---
 
-This paper addresses online adaptable multi-task prediction for both intention and trajectory. 
-The objective is to enhance the performance of both predictions using only feedback from observed trajectories. 
-To achieve this, we integrate the EKF with exponential moving average filtering and a dynamic multi-epoch update strategy, 
-resulting in improved prediction accuracy.
+
+This paper presents an online adaptable multi-task model for predicting human intention and trajectory. The proposed approach integrates EKF with exponential moving average filtering and a dynamic multi-epoch update strategy to enhance accuracy using feedback from observed trajectories.
