--- a/_posts/2021-04-01-OE.md
+++ b/_posts/2021-04-01-OE.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Reinforcement Learning based Robust Control Algorithms for Coherent Pulse Stacking"
 date:   2021-04-01 18:08:39 +00:00
 image: /images/CPS-RL.png
-categories: research
+categories: optics
 author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>,  Jie Wang, Bowei Yang, Aimin Wang, Zhigang Zhang"
 venue: "Optics Express"
@@ -11,6 +11,5 @@ arxiv: https://opg.optica.org/oe/fulltext.cfm?uri=oe-29-16-26068&id=453824
 code: https://github.com/Walleclipse/Reinforcement-Learning-Pulse-Stacking 
 ---
 
-To achieve fast and robust optical control for coherent pulse stacking, we integrated the stochastic parallel gradient descent (SPGD) method 
-with the reinforcement learning algorithm soft actor-critic (SAC), forming a powerful hybrid algorithm, SAC-SPGDM. 
-Simulations demonstrate that this algorithm effectively controls the optical system, enabling the coherent stacking of 128 pulses.
+
+This work introduces SAC-SPGDM, a hybrid algorithm combining stochastic parallel gradient descent with the soft actor-critic reinforcement learning method, enabling fast and robust optical control for coherent stacking of 128 pulses as demonstrated in simulations.
