--- a/_posts/2021-04-12-CCT.md
+++ b/_posts/2021-04-12-CCT.md
@@ -15,8 +15,4 @@ highlight: true
 ---
 
 
-In this paper, we dispel the myth that transformers are “data hungry” and therefore can only be applied to large sets of data. 
-We show for the first time that with the right size and tokenization, transformers can perform head-to-head with state-of-the-art CNNs on small datasets, 
-often with better accuracy and fewer parameters.
-Our Compact Convolutional Transformer (CCT) achieves 98% accuracy on CIFAR-10 with only 3.7 million parameters, 
-making it over 10 times smaller than other transformers and just 15% the size of ResNet50, while maintaining comparable performance.
+This paper challenges the notion that transformers require large datasets, demonstrating that with appropriate size and tokenization, they can match or surpass CNNs on small datasets. The Compact Convolutional Transformer (CCT) achieves 98% accuracy on CIFAR-10 with only 3.7M parameters, outperforming other transformers in efficiency and rivaling ResNet50 at 15% of its size.
