--- a/_posts/2021-12-06-PAR.md
+++ b/_posts/2021-12-06-PAR.md
@@ -15,7 +15,4 @@ highlight: true
 ---
 
 
-In this paper, we propose Property-Aware Relation (PAR) Networks to address the few-shot learning problem in molecular property prediction. 
-We introduce a property-aware embedding function and an adaptive relation graph learning module, enabling the joint estimation of 
-molecular relation graphs tailored to specific properties. In addition, we adopt a meta-learning strategy where the parameters are 
-selectively updated within tasks in order to model generic and property-aware knowledge separately. 
+This paper proposes Property-Aware Relation (PAR) Networks for few-shot molecular property prediction, combining property-aware embeddings and adaptive relation graph learning to tailor molecular relations to specific properties. A meta-learning strategy selectively updates parameters to balance generic and property-specific knowledge.
