--- a/_posts/2022-05-01-WeHelp.md
+++ b/_posts/2022-05-01-WeHelp.md
@@ -12,8 +12,4 @@ code: https://github.com/Walleclipse/WeHelp
 ---
 
 
-In this project, we introduce WeHelp, a shared autonomy system designed to assist wheelchair users. 
-The WeHelp system features three operational modes: following mode, remote control mode, and teleoperation mode. 
-In following mode, the robot autonomously tracks and follows the wheelchair user using visual tracking technology. 
-When the user requests assistance, the system utilizes speech recognition to interpret the command and seamlessly transitions 
-to either remote control mode or teleoperation mode.
+This project introduces WeHelp, a shared autonomy system for wheelchair users with three modes: autonomous following via visual tracking, and remote control or teleoperation activated through speech recognition for seamless assistance.
