--- a/_posts/2023-06-26-OPSEnv.md
+++ b/_posts/2023-06-26-OPSEnv.md
@@ -12,7 +12,5 @@ code: https://github.com/Walleclipse/Reinforcement-Learning-Pulse-Stacking
 video: https://icml.cc/virtual/2022/19942
 ---
 
-In this paper, we develop an optical simulation environment tailored for reinforcement learning-based controllers. 
-This environment accurately models the nonconvexity, nonlinearity, and time-dependent noise characteristic of optical systems, 
-providing a realistic testing ground. 
-Additionally, we present benchmark results for various reinforcement learning algorithms within the proposed simulation environment.
+
+This paper introduces an optical simulation environment for reinforcement learning-based controllers, modeling nonconvexity, nonlinearity, and time-dependent noise in optical systems. Benchmark results for various reinforcement learning algorithms are also provided.
