--- a/_posts/2023-09-06-BioSLAM.md
+++ b/_posts/2023-09-06-BioSLAM.md
@@ -13,7 +13,5 @@ blog: https://metaslam.github.io/localization/2022/07/31/BioSLAM/
 highlight: true
 ---
 
-We introduce BioSLAM, a lifelong SLAM framework designed to incrementally learn new appearances while maintaining accurate place recognition for previously visited areas. 
-BioSLAM incorporates a novel dual-memory mechanism: (1) a dynamic memory for efficiently learning new observations and (2) a static memory 
-for balancing new and old knowledge. To the best of our knowledge, BioSLAM is the first memory-enhanced lifelong SLAM system tailored to 
-support incremental place recognition in long-term navigation tasks.
+
+This paper presents BioSLAM, a lifelong SLAM framework with a dual-memory mechanism: dynamic memory for learning new observations and static memory for balancing old and new knowledge. It is the first memory-enhanced system for incremental place recognition in long-term navigation.
