--- a/_posts/2024-05-17-SNR.md
+++ b/_posts/2024-05-17-SNR.md
@@ -11,7 +11,5 @@ arxiv: https://openreview.net/forum?id=iV0jktFZ5Y
 code: https://openreview.net/attachment?id=iV0jktFZ5Y&name=supplementary_material
 ---
 
-This work tackles the over-regularization issue in certified training methods by introducing the concepts of neuron variance and 
-neuron stability, analyzing their roles in over-regularization and model robustness. To address this challenge, we extend the 
-Signal-to-Noise Ratio (SNR) framework to the domain of model robustness, providing a fresh perspective. Additionally, we develop 
-SNR-inspired loss functions designed to  mitigate over-regularization while  enhancing robustness.
+
+This work addresses over-regularization in certified training by introducing neuron variance and stability, analyzing their impact on robustness. Extending the Signal-to-Noise Ratio (SNR) framework, it proposes SNR-inspired loss functions to mitigate over-regularization and improve robustness.
