--- a/_posts/2024-11-08-KOROL.md
+++ b/_posts/2024-11-08-KOROL.md
@@ -14,7 +14,5 @@ video: https://x.com/i/status/1832866560270385233
 ---
 
 
-We propose a method that constructs a Koopman operator using object features predicted by a trained feature extractor from image, 
-which is then employed to auto-regressively advance system states. The feature extractor is designed to embed scene information into object 
-features, enabling precise propagation of robot trajectories. Our results demonstrate that this approach maintains high task success 
-rates using learned features and extends its applicability to real-world manipulation tasks without relying on ground-truth object states.
+
+This paper proposes a method to construct a Koopman operator using object features extracted from images, enabling precise propagation of robot trajectories. By embedding scene information into learned features, the approach achieves high task success rates and extends to real-world manipulation without ground-truth object states.
