--- a/_posts/2024-11-21-Adam.md
+++ b/_posts/2024-11-21-Adam.md
@@ -12,7 +12,5 @@ arxiv: https://arxiv.org/abs/2412.02153
 ---
 
 
-While Adam is known for its faster convergence, it often exhibits poorer generalization compared to SGD. In this work, 
-we show the standard initialization of the second-order moment estimation of Adam as a significant factor contributing 
-to these limitations. We introduce simple yet effective solutions: initializing the second-order moment estimation with non-zero values, 
-using either data-driven or random initialization strategies. 
+
+This work identifies the standard initialization of Adam's second-order moment estimation as a key factor limiting generalization. It proposes effective solutions, including non-zero initialization with data-driven or random strategies, to improve performance.
