--- a/_posts/2024-11-22-HRC.md
+++ b/_posts/2024-11-22-HRC.md
@@ -14,7 +14,4 @@ video: https://www.youtube.com/watch?v=2kkANN9ueVY
 
 
 
-In this paper, we present a novel multimodal and hierarchical framework designed to enable efficient and robust long-term 
-human-robot collaboration (HRC). The proposed framework seamlessly integrates visual observations with speech commands, 
-facilitating intuitive, natural, and flexible interactions between humans and robots. We deploy the framework on the KINOVA GEN3 robot 
-and conduct extensive user studies through real-world long-term HRC experiments.
+This paper introduces a multimodal hierarchical framework for efficient long-term human-robot collaboration, integrating visual observations and speech commands for intuitive interactions. Deployed on the KINOVA GEN3 robot, the framework is validated through extensive real-world user studies.
