--- a/_posts/2024-07-11-MedGPT.md
+++ b/_posts/2024-07-11-MedGPT.md
@@ -10,9 +10,5 @@ venue: "MedRxiv preprint"
 arxiv: https://www.medrxiv.org/content/10.1101/2024.07.10.24310247v2 
 ---
 
-This study aims to enhance GPT-4’s domain-specific expertise by employing the Retrieval-Augmented Generation (RAG) approach, 
-which integrates up-to-date, evidence-based knowledge into GPT-4’s foundational database. 
-Additionally, we plan to explore the use of commonly used automatic evaluation metrics in natural language processing, such as BERT score, 
-BLEURT, and cosine similarity, alongside human evaluation, to develop a semi-automatic framework. 
-This aims to reduce dependency on exhaustive human evaluations, addressing the need for efficient and scalable assessment tools in medical 
-decision-making.
+
+This study enhances GPT-4's domain expertise using the Retrieval-Augmented Generation (RAG) approach to integrate evidence-based knowledge. It also develops a semi-automatic evaluation framework combining metrics like BERT score, BLEURT, and cosine similarity with human assessments to streamline evaluation in medical decision-making.
