--- a/_posts/2021-12-06-PAR.md
+++ b/_posts/2021-12-06-PAR.md
@@ -8,7 +8,7 @@ author: "Abulikemu Abuduweili"
 authors: "Yaqing Wang*, <strong>Abulikemu Abuduweili*</strong>,  Quanming Yao, Dejing Dou"
 venue: "Advances in Neural Information Processing Systems (NeurIPS) <strong>[Spotlight]</strong>, in adjunct with IJCAI-WSRL Workshop <strong>[Best Paper Runner-ups]</strong> "
 location: "Virtual"
-arxiv: https://proceedings.neurips.cc/paper/2021/file/91bc333f6967019ac47b49ca0f2fa757-Paper.pdf
+arxiv: https://proceedings.neurips.cc/paper_files/paper/2021/hash/91bc333f6967019ac47b49ca0f2fa757-Abstract.html 
 code: https://github.com/tata1661/PAR-NeurIPS21 
 video: https://neurips.cc/virtual/2021/poster/26476 
 highlight: true
