--- a/_posts/2024-11-08-KOROL.md
+++ b/_posts/2024-11-08-KOROL.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "KOROL: Learning Visualizable Object Feature with Koopman Operator Rollout for Manipulation"
 date:   2024-11-08 18:08:39 +00:00
-image: /images/KOROL.png
+image: /images/KOROL.gif
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Hongyi Chen, <strong>Abulikemu Abuduweili</strong>,  Aviral Agrawal, Yunhai Han, Harish Ravichandar, Changliu Liu, Jeffrey Ichnowski"
