--- a/_posts/2024-11-22-HRC.md
+++ b/_posts/2024-11-22-HRC.md
@@ -6,7 +6,7 @@ image: /images/HRC.gif
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "Peiqi Yu*, <strong>Abulikemu Abuduweili*</strong>, Ruixuan Liu, Changliu Liu"
-venue: " In submission; Arxiv preprint"
+venue: "Arxiv preprint"
 arxiv: https://arxiv.org/abs/2411.15711 
 code: https://github.com/intelligent-control-lab/Robust-Hierarchial-Multimodal-HRC
 video: https://www.youtube.com/watch?v=2kkANN9ueVY 
