--- a/_posts/2025-09-01-Thesis.md
+++ b/_posts/2025-09-01-Thesis.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Algorithms for Data-efficient Continual Robot Learning"
 date:   2025-09-01 18:08:39 +00:00
-image: /images/Thesis.png
+image: /images/Thesis.gif
 categories: research
 author: "Abulikemu Abuduweili"
 authors: "<strong>Abulikemu Abuduweili</strong>"
